-returned missed file

--- a/src/EditorPluginInterfaces/EditorPluginInterfaces.csproj
+++ b/src/EditorPluginInterfaces/EditorPluginInterfaces.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Toolbar\IMenu.cs" />
     <Compile Include="Toolbar\IToolbar.cs" />
     <Compile Include="UndoRedo\IUndoRedoStack.cs" />
+    <Compile Include="UndoRedo\StackChangedArgs.cs" />
     <Compile Include="VertexEventArgs.cs" />
   </ItemGroup>
   <ItemGroup>
