--- a/src/WpfControlsLib/WpfControlsLib.csproj
+++ b/src/WpfControlsLib/WpfControlsLib.csproj
@@ -118,6 +118,8 @@
     </Compile>
     <Compile Include="Controls\Palette\PaletteElement.cs" />
     <Compile Include="Controls\Palette\PaletteViewModel.cs" />
+    <Compile Include="Controls\Scene\EventArguments\ElementAddedEventArgs.cs" />
+    <Compile Include="Controls\Scene\EventArguments\ElementRemovedEventArgs.cs" />
     <Compile Include="Controls\Scene\IElementProvider.cs" />
     <Compile Include="Controls\Scene\Scene.xaml.cs">
       <DependentUpon>Scene.xaml</DependentUpon>
