--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ sudo: false
 
 before_install:
   - chmod +x build.sh
+  - curl -sSL https://dot.net/v1/dotnet-install.sh | bash /dev/stdin --channel Current
+  - export PATH="~/.dotnet:$PATH"
  
 script: 
   - ./build.sh
