Started rewriting of controller/command system

--- a/src/WpfControlsLib/WpfControlsLib.csproj
+++ b/src/WpfControlsLib/WpfControlsLib.csproj
@@ -98,6 +98,7 @@
     <Compile Include="Constraints\ConstraintItem.cs" />
     <Compile Include="Controller\Controller.cs" />
     <Compile Include="Controller\SceneActionsRegister.cs" />
+    <Compile Include="Controller\UndoRedoAvailabilityChangedArgs.cs" />
     <Compile Include="Controls\Console\AppConsole.xaml.cs">
       <DependentUpon>AppConsole.xaml</DependentUpon>
     </Compile>
@@ -362,9 +363,6 @@
   </Choose>
   <ItemGroup>
     <Analyzer Include="..\..\packages\StyleCop.Analyzers\analyzers\dotnet\cs\StyleCop.Analyzers.CodeFixes.dll">
-      <Paket>True</Paket>
-    </Analyzer>
-    <Analyzer Include="..\..\packages\StyleCop.Analyzers\analyzers\dotnet\cs\StyleCop.Analyzers.dll">
       <Paket>True</Paket>
     </Analyzer>
   </ItemGroup>
