--- a/src/EditorPluginInterfaces/EditorPluginInterfaces.csproj
+++ b/src/EditorPluginInterfaces/EditorPluginInterfaces.csproj
@@ -64,11 +64,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="IScene.cs" />
     <Compile Include="Toolbar\IButton.cs" />
-    <Compile Include="Toolbar\ICommand.cs" />
+    <Compile Include="ICommand.cs" />
     <Compile Include="Toolbar\IMenu.cs" />
     <Compile Include="Toolbar\IToolbar.cs" />
-    <Compile Include="UndoRedo\IUndoRedoStack.cs" />
-    <Compile Include="UndoRedo\StackChangedArgs.cs" />
     <Compile Include="VertexEventArgs.cs" />
   </ItemGroup>
   <ItemGroup>
