--- a/.gitattributes
+++ b/.gitattributes
@@ -2,16 +2,13 @@
 * text=auto
 
 # Custom for Visual Studio
-*.cs diff=csharp text=auto eol=lf
-*.vb diff=csharp text=auto eol=lf
-*.fs diff=csharp text=auto eol=lf
-*.fsi diff=csharp text=auto eol=lf
-*.fsx diff=csharp text=auto eol=lf
-*.sln text eol=crlf merge=union
+*.cs diff=csharp text
+*.fs diff=csharp text
+*.fsi diff=csharp text
+*.fsx diff=csharp text
+*.sln text merge=union
 *.csproj merge=union
-*.vbproj merge=union
 *.fsproj merge=union
-*.dbproj merge=union
 
 # Standard to msysgit
 *.doc diff=astextplain
