--- a/src/WpfControlsLib/WpfControlsLib.csproj
+++ b/src/WpfControlsLib/WpfControlsLib.csproj
@@ -96,8 +96,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Constraints\ConstraintItem.cs" />
+    <Compile Include="Controller\CompositeCommand.cs" />
     <Compile Include="Controller\Controller.cs" />
-    <Compile Include="Controller\SceneActionsRegister.cs" />
     <Compile Include="Controller\UndoRedoAvailabilityChangedArgs.cs" />
     <Compile Include="Controls\Console\AppConsole.xaml.cs">
       <DependentUpon>AppConsole.xaml</DependentUpon>
@@ -121,8 +121,13 @@
     </Compile>
     <Compile Include="Controls\Palette\PaletteElement.cs" />
     <Compile Include="Controls\Palette\PaletteViewModel.cs" />
+    <Compile Include="Controls\Scene\Commands\CreateNodeCommand.cs" />
+    <Compile Include="Controls\Scene\Commands\RemoveNodeCommand.cs" />
+    <Compile Include="Controls\Scene\Commands\RemoveEdgeCommand.cs" />
+    <Compile Include="Controls\Scene\Commands\CreateEdgeCommand.cs" />
     <Compile Include="Controls\Scene\EventArguments\ElementAddedEventArgs.cs" />
     <Compile Include="Controls\Scene\EventArguments\ElementRemovedEventArgs.cs" />
+    <Compile Include="Controls\Scene\Geometry.cs" />
     <Compile Include="Controls\Scene\IElementProvider.cs" />
     <Compile Include="Controls\Scene\Scene.xaml.cs">
       <DependentUpon>Scene.xaml</DependentUpon>
