--- a/tests/WpfControlsLib.Tests/WpfControlsLib.Tests.csproj
+++ b/tests/WpfControlsLib.Tests/WpfControlsLib.Tests.csproj
@@ -32,10 +32,15 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Repo, Version=0.1.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\src\Repo\bin\Debug\Repo.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ControllerTests\ControllerTests.cs" />
+    <Compile Include="ControlsTests\SceneTests\SceneCommandsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
