--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,6 +3,10 @@ image: Visual Studio 2017
 init:
   - git config --global core.autocrlf input
 
+before_build:
+  - .paket\paket.exe update
+  - .paket\paket.exe install
+
 build_script:
   - cmd: build.cmd
 
